--- a/config/locales/models/customer.pt-BR.yml
+++ b/config/locales/models/customer.pt-BR.yml
@@ -1,7 +1,7 @@
 pt-BR:
   activerecord:
     models:
-      customer: Cliente
+      customer: Clientes
     attributes:
       customer:
         cnpj: CNPJ
